noinst_LTLIBRARIES=libwslay.la

libwslay_la_CFLAGS= \
   -I$(srcdir)/lib/includes

libwslay_la_SOURCES= \
    lib/wslay_net.c \
    lib/wslay_event.h \
    lib/wslay_queue.c \
    lib/wslay_queue.h \
    lib/includes/wslay/wslay.h \
    lib/wslay_stack.c \
    lib/wslay_event.c \
    lib/wslay_net.h \
    lib/wslay_frame.h \
    lib/wslayver.h \
    lib/wslay_frame.c \
    lib/wslay_stack.h

